tests/snapshots/examples_fixtures/aoc__2025__aoc_day12_haskell_style.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day12_haskell_style.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Parameter Type Mismatch

Parameter 1 has the wrong type.

  examples/aoc/2025/aoc_day12_haskell_style.flx:37:5
   |
37 |     fold(chars(s), 0, /(acc, c) -> if c == "#" { acc + 1 } else { acc })
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     -------------------------------------------------------------------- parameter 1 has type `Array<String>`

   |     -------------------------------------------------------------------- this type mismatch is reported here

Note:
  expected parameter type: List<_>
  found parameter type: Array<String>
  the conflicting types meet at this expression

Help:
  Change parameter 1 to use `List<_>` consistently.


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day12_haskell_style.flx:42:23
   |
42 |         if in_block { push(acc, cur_size) } else { acc }
   |                       ^^^^

Hint:
  Define it first: let push = ...;


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day12_haskell_style.flx:64:40
   |
64 |     parse_area_counts(tokens, idx + 1, push(acc, parse_int(t)))
   |                                        ^^^^

Hint:
  Define it first: let push = ...;


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day12_haskell_style.flx:92:37
   |
92 |         parse_areas(lines, idx + 1, push(acc, [|w, h, counts|]))
   |                                     ^^^^

Hint:
  Define it first: let push = ...;


error[E300]: Type Mismatch

I found a type mismatch.

  examples/aoc/2025/aoc_day12_haskell_style.flx:92:55
   |
92 |         parse_areas(lines, idx + 1, push(acc, [|w, h, counts|]))
   |                                                       ^^^^^^
   |                                                       ------ this expression has type `Array<_>`

   |                                                       ------ this type mismatch is reported here

Note:
  expected type: Int
  found type: Array<_>
  the conflicting types meet at this expression

Help:
  These two types are not compatible.

Found 5 errors.
== stdout ==
<not executed>
